[gd_scene load_steps=9 format=3 uid="uid://ct7m6jxvarhr8"]

[ext_resource type="Script" path="res://Scenes/UI/end_screen.gd" id="1_hvw7r"]
[ext_resource type="PackedScene" uid="uid://81q06sibbbwq" path="res://Scenes/UI/end_screen_card.tscn" id="2_rle0r"]
[ext_resource type="AudioStream" uid="uid://bxvqq2lvu5t7r" path="res://Assets/Audio/Jingles/Hit jingles/jingles_victory.ogg" id="3_mxp8a"]
[ext_resource type="AudioStream" uid="uid://dcfqxmcf22bd7" path="res://Assets/Audio/Jingles/Hit jingles/jingles_defeat.ogg" id="4_exv3v"]

[sub_resource type="Animation" id="Animation_0jelt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8sa6b"]
resource_name = "in"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cwolr"]
resource_name = "out"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ap2gg"]
_data = {
"RESET": SubResource("Animation_0jelt"),
"in": SubResource("Animation_8sa6b"),
"out": SubResource("Animation_cwolr")
}

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_hvw7r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ap2gg")
}
autoplay = "in"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.607843, 0.298039, 0.639216, 0.352941)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EndScreenCard" parent="MarginContainer" instance=ExtResource("2_rle0r")]
layout_mode = 2

[node name="VictoryStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mxp8a")
volume_db = -4.0

[node name="DefeatStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_exv3v")
volume_db = -4.0
